--- a/production/form.html
+++ b/production/form.html
@@ -20,7 +20,7 @@
     <!-- bootstrap-wysiwyg -->
     <link href="../vendors/google-code-prettify/bin/prettify.min.css" rel="stylesheet">
     <!-- Select2 -->
-    <link href="../vendors/select2/dist/css/select2.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <!-- Switchery -->
     <link href="../vendors/switchery/dist/switchery.min.css" rel="stylesheet">
     <!-- starrr -->
@@ -199,6 +199,7 @@
                           <select id="sel_mem" class="select2 form-control col-md-7 col-xs-12" required="required" multiple="multiple">
                             <optgroup label="즐겨찾기" id="sel_fav">
                               <option>라</option>
+                              <option>동동</option>
                             </optgroup>
                             <optgroup label="그룹" id="sel_grp">
                               <option>엥</option>
@@ -270,7 +271,7 @@
     <!-- Switchery -->
     <script src="../vendors/switchery/dist/switchery.min.js"></script>
     <!-- Select2 -->
-    <script src="../vendors/select2/dist/js/select2.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
     <!-- Parsley -->
     <script src="../vendors/parsleyjs/dist/parsley.min.js"></script>
     <!-- Autosize -->
@@ -289,6 +290,10 @@
 
       $('#myDatepicker3').datetimepicker({
         format: 'hh:mm A'
+      });
+
+      $(document).ready(function() {
+          $('.select2').select2();
       });
     </script>
 	
