--- a/production/login.html
+++ b/production/login.html
@@ -178,6 +178,10 @@
     <script src="../vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
     <script src="../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Custom Theme Scripts -->
+    <script src="../build/js/custom.min.js"></script>
+
+    <!-- <script src="usefulFunction.js"></script> -->
 
     <script type="text/javascript">
       $(document).ready(function(){
