--- a/production/form.html
+++ b/production/form.html
@@ -237,7 +237,7 @@
         <!-- footer content -->
         <footer>
           <div class="pull-right">
-            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+            Copyright &copy; 2018 Meetkey. All rights reserved.
           </div>
           <div class="clearfix"></div>
         </footer>
