--- a/production/tables_dynamic.html
+++ b/production/tables_dynamic.html
@@ -19,7 +19,7 @@
     <link href="../vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="../build/css/custom.min.css" rel="stylesheet">
+    <link href="../build/css/custom.css" rel="stylesheet">
   </head>
 
   <body class="nav-md">
@@ -133,17 +133,6 @@
               <div class="title_left">
                 <h3>회의 예약 리스트 </h3>
               </div>
-
-              <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Go!</button>
-                    </span>
-                  </div>
-                </div>
-              </div>
             </div>
             
             <div class="clearfix"></div>
@@ -152,7 +141,7 @@
               <div class="col-md-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>예정된 회의 목록</h2>
+                    <h4><i class="fa fa-bell"></i> 예정된 회의 목록</h4>
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
@@ -161,15 +150,14 @@
                     <table class="table table-striped table-hover projects">
                       <thead>
                         <tr>
-                          <th style="width: 1%">#</th>
                           <th style="width: 20%">회의 주제</th>
                           <th style="width: 20%">회의 일시</th>
                           <th>회의 참여자</th>
+                          <th style="width: 8%; text-align: center;">시작/참가</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
-                          <td>#</td>
                           <td>
                             <a>회의 주제 1번입니다.</a>
                           </td>
@@ -196,9 +184,13 @@
                               </li>
                             </ul>
                           </td>
+                          <td style="text-align: center;">
+                            <!-- 최의 개최자일 경우 btn-info 클래스 -->
+                            <!-- 버튼의 링크는 해당 회의 정보가 들어가있는 회의 시작화면 -->
+                            <button type="button" onclick="location.href='project_detail.html'" class="btn btn-info btn-xs">시작</button>
+                          </td>
                         </tr>
                         <tr>
-                          <td>#</td>
                           <td>
                             <a>회의 주제 2번입니다.</a>
                           </td>
@@ -216,9 +208,12 @@
                               </li>
                             </ul>
                           </td>
+                          <td style="text-align: center;">
+                            <!-- 회의 참가자일경우 btn-dark 클래스 -->
+                            <button type="button" onclick="location.href='project_detail.html'" class="btn btn-dark btn-xs">참가</button>
+                          </td>
                         </tr>
                         <tr>
-                          <td>#</td>
                           <td>
                             <a>회의 주제 3번입니다.</a>
                           </td>
@@ -239,6 +234,10 @@
                               </li>
                             </ul>
                           </td>
+                          <td style="text-align: center;">
+                            <!-- 회의 시작 시간 전 - 버튼 속성 disabled -->
+                            <button type="button" disabled onclick="location.href='project_detail.html'" class="btn btn-info btn-xs">시작</button>
+                          </td>
                         </tr>
                       </tbody>
                     </table>
@@ -255,7 +254,7 @@
         <!-- footer content -->
         <footer>
           <div class="pull-right">
-            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+            Copyright &copy; 2018 Meetkey. All rights reserved.
           </div>
           <div class="clearfix"></div>
         </footer>
@@ -275,6 +274,6 @@
     <script src="../vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
     
     <!-- Custom Theme Scripts -->
-    <script src="../build/js/custom.min.js"></script>
+    <script src="../build/js/custom.js"></script>
   </body>
 </html>
