--- a/production/project_detail2.html
+++ b/production/project_detail2.html
@@ -306,7 +306,7 @@
 
           // 시작버튼 
           // Start listening.
-          annyang.start({ autoRestart: true, continuous: true });
+          annyang.start({ autoRestart: true, continuous: false });
           var recognition = annyang.getSpeechRecognizer();
           var final_transcript = '';
           var time = 0;
