--- a/production/form.html
+++ b/production/form.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	  
+
     <title>Gentelella Alela! | </title>
 
     <!-- Bootstrap -->
@@ -175,7 +175,7 @@
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12  date" >
                           <input type="text" id="myDatepicker2" name required="required" class="form-control col-md-7 col-xs-12">
-                          
+
                         </div>
                       </div>
                       <div class="form-group">
@@ -208,14 +208,14 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <label for="meet_memo" class="control-label col-md-3 col-sm-3 col-xs-12">비고 
+                        <label for="meet_memo" class="control-label col-md-3 col-sm-3 col-xs-12">비고
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                           <textarea id="meet_memo" class="form-control col-md-7 col-xs-12">
                           </textarea>
                         </div>
                       </div>
-                      
+
                       <div class="ln_solid"></div>
                       <div class="form-group">
                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
@@ -260,7 +260,7 @@
     <!-- bootstrap-daterangepicker -->
     <script src="../vendors/moment/min/moment.min.js"></script>
     <script src="../vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-    <!-- bootstrap-datetimepicker -->    
+    <!-- bootstrap-datetimepicker -->
     <script src="../vendors/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <!-- bootstrap-wysiwyg -->
     <script src="../vendors/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js"></script>
@@ -282,6 +282,7 @@
     <script src="../vendors/starrr/dist/starrr.js"></script>
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.js"></script>
+    <script src="./js/cookie.js"></script>
 
     <script>
       $('#myDatepicker2').datetimepicker({
@@ -296,6 +297,6 @@
           $('.select2').select2();
       });
     </script>
-	
+
   </body>
 </html>
