--- a/production/tables_dynamic.html
+++ b/production/tables_dynamic.html
@@ -19,7 +19,7 @@
     <link href="../vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="../build/css/custom.css" rel="stylesheet">
+    <link href="../build/css/custom.min.css" rel="stylesheet">
   </head>
 
   <body class="nav-md">
@@ -133,31 +133,43 @@
               <div class="title_left">
                 <h3>회의 예약 리스트 </h3>
               </div>
+
+              <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" type="button">Go!</button>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
-            
+
             <div class="clearfix"></div>
 
             <div class="row">
               <div class="col-md-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h4><i class="fa fa-bell"></i> 예정된 회의 목록</h4>
+                    <h2>예정된 회의 목록</h2>
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
 
                     <!-- start project list -->
-                    <table class="table table-striped table-hover projects">
+                    <table class="table table-striped table-hover projects" id="meeting">
                       <thead>
                         <tr>
+                          <th style="width: 1%">#</th>
                           <th style="width: 20%">회의 주제</th>
                           <th style="width: 20%">회의 일시</th>
                           <th>회의 참여자</th>
-                          <th style="width: 8%; text-align: center;">시작/참가</th>
                         </tr>
                       </thead>
-                      <tbody>
+                      <tbody id=meetingBody>
                         <tr>
+                          <td>#</td>
                           <td>
                             <a>회의 주제 1번입니다.</a>
                           </td>
@@ -184,13 +196,9 @@
                               </li>
                             </ul>
                           </td>
-                          <td style="text-align: center;">
-                            <!-- 최의 개최자일 경우 btn-info 클래스 -->
-                            <!-- 버튼의 링크는 해당 회의 정보가 들어가있는 회의 시작화면 -->
-                            <button type="button" onclick="location.href='project_detail.html'" class="btn btn-info btn-xs">시작</button>
-                          </td>
                         </tr>
                         <tr>
+                          <td>#</td>
                           <td>
                             <a>회의 주제 2번입니다.</a>
                           </td>
@@ -208,12 +216,9 @@
                               </li>
                             </ul>
                           </td>
-                          <td style="text-align: center;">
-                            <!-- 회의 참가자일경우 btn-dark 클래스 -->
-                            <button type="button" onclick="location.href='project_detail.html'" class="btn btn-dark btn-xs">참가</button>
-                          </td>
                         </tr>
                         <tr>
+                          <td>#</td>
                           <td>
                             <a>회의 주제 3번입니다.</a>
                           </td>
@@ -234,10 +239,6 @@
                               </li>
                             </ul>
                           </td>
-                          <td style="text-align: center;">
-                            <!-- 회의 시작 시간 전 - 버튼 속성 disabled -->
-                            <button type="button" disabled onclick="location.href='project_detail.html'" class="btn btn-info btn-xs">시작</button>
-                          </td>
                         </tr>
                       </tbody>
                     </table>
@@ -254,7 +255,7 @@
         <!-- footer content -->
         <footer>
           <div class="pull-right">
-            Copyright &copy; 2018 Meetkey. All rights reserved.
+            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
           </div>
           <div class="clearfix"></div>
         </footer>
@@ -272,8 +273,72 @@
     <script src="../vendors/nprogress/nprogress.js"></script>
     <!-- bootstrap-progressbar -->
     <script src="../vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
-    
+
     <!-- Custom Theme Scripts -->
-    <script src="../build/js/custom.js"></script>
+    <script src="../build/js/custom.min.js"></script>
+    <script src="./js/cookie.js"></script>
+
+    <script>
+      // 쿠키없으면 그냥 1로 설정
+      if(!getCookie('unum')) {
+        document.cookie = "unum=1;max-age=60*60*24*3";
+        var unum=1;
+      }
+
+      $(document).ready(function(){
+        printBookedMeetingList();
+      });
+
+      function printBookedMeetingList() {
+
+        var settings = {
+          crossDomain: true,
+          url: "https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/meet/info?unum="+unum+"&done=false",
+          type: "GET",
+          contentType: "application/json"
+        }
+
+        $.ajax(settings)
+          .done(function (response) {
+            if('message' in response) {
+              alert(response.message)
+            } else {
+              console.log(response);
+              // data = [{"member":{}, "_id":string, "mname":string, "date":date+time, "where":string, "made":unum, "memo":string}]
+              var data = response.data;
+              var meetTable = $('#meetingBody');
+              for(var i=0;i<data.length;i++){
+                var member = data[i].member_raw;
+                var list_inline = ""
+                for(var j=0;j<member.length;j++){
+                  list_inline += `
+                    <li>${data[i].member[member[j]].uname}
+                      <!-- <img src="images/user.png" class="avatar" alt="Avatar"> -->
+                    </li>
+                  `
+                }
+                var date = new Date(data[i].date);
+                var tr = `
+                  <tr>
+                    <td>#</td>
+                    <td>${data[i].mname}</td>
+                    <td><small>${date.getFullYear()+"-"+date.getMonth()+"-"+date.getDate()+" "+date.getHours()+":"+date.getMinutes()}</small></td>
+                    <td>
+                    <ul class="list-inline">
+                      ${list_inline}
+                    </ul>
+                    </td>
+                  </tr>
+                `
+                meetTable.append(tr);
+              }
+            }
+          })
+          .fail(function () {
+            alert('fail');
+          });
+      }
+    </script>
+
   </body>
 </html>
