--- a/production/project_detail2.html
+++ b/production/project_detail2.html
@@ -204,14 +204,27 @@
                           </div>
 
                           <br />
-                          <h5>회의 첨부파일</h5>
-                          <input type="file">
+
+                          <!-- <div class="project_detail">
+                            <p class="title">회의 첨부파일</p>
+                            <input type="file">
+                          </div> -->
 
                           <br />
 
-                          <div class="text-right mtop20">
-                            <input type=text id="unum"></input>
-                            <input type="submit" value="회의 제출" onclick="sendTalk();" class="btn btn-sm btn-primary">
+                          <!-- 오직 주최자에게만 주어지는 부분 -->
+                          <div id="OnlyMaker">
+                            <!-- <form data-parsley-validate class="form-vertical">
+                              <div class="form-group">
+                                <label class="control-label" for="num_cluster">주제 개수를 입력해주세요! <span class="required">*</span></label>
+                                <input type="number" id="num_cluster" min="1" required="required" class="form-control"> 
+                              </div>
+                              <div class="form-group">
+                                <div class="text-right mtop20">
+                                  <input type="submit" value="회의 종료" onclick="endMeeting();" class="btn btn-sm btn-primary">
+                                </div>
+                              </div>
+                            </form> -->
                           </div>
                         </div>
 
@@ -390,6 +403,78 @@
             }
           })
           .fail(function() {});
+      }
+
+      // 주최자에게만 나타나는 클러스터 수 입력란&회의 종료 버튼 프린트
+      function printMeetingEnd() {
+
+        var settings = {
+          crossDomain: true,
+          url: `https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/meet/end`,
+          // 주최자임을 나타내는 unum? 을 가져와야하지않나효 ?
+          type: "GET",
+          contentType: "application/json",
+        }
+
+        $.ajax(settings)
+          .done(function (response) {
+            if(response.message) {
+              alert("error there");
+            } else {
+              // alert("success!");
+              var MeetingMaker = response.data;
+              for(var i=0, i<MeetingMaker.length;i++){
+                var data = `
+                <form data-parsley-validate class="form-vertical">
+                  <div class="form-group">
+                    <label class="control-label" for="num_cluster">주제 개수를 입력해주세요! <span class="required">*</span></label>
+                    <!--num_cluster 입력창-->
+                    <input type="number" id="num_cluster" min="1" required="required" class="form-control"> 
+                  </div>
+                  <div class="form-group">
+                    <div class="text-right mtop20">
+                      <input type="submit" value="회의 종료" onclick="endMeeting();" class="btn btn-sm btn-primary">
+                    </div>
+                  </div>
+                </form>
+                `
+                $("#OnlyMaker").append(data);
+              }
+            }
+          })
+          .fail(function() {});
+      }
+
+      // 주최자에게 입력받은 클러스터 수
+      var num_cluster = $("#num_cluster").val();
+
+      //회의 종료 버튼 눌렀을 때
+      function endMeeting() {
+
+        var settings = {
+          crossDomain: true,
+          url: `https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/meet/end`,
+          type: "GET",
+          contentType: "application/json",
+          data: `{
+            "mid": "5bb07e5f5fb2b0661d0f6e8b",
+            "num_cluster": "${num_cluster}"
+          }`
+        }
+
+        $.ajax(settings)
+          .done(function (response) {
+            if(response.message) {
+              alert("error there");
+            } else {
+              alert("success!");
+              window.location.replace("https://purlwon.github.io/Meetkey/production/projects.html");
+              
+            }
+          })
+          .fail(function() {
+            alert("fail!");
+          });
       }
 
 
