add mid query for not made user

--- a/production/project_detail.html
+++ b/production/project_detail.html
@@ -210,7 +210,7 @@
                           <br />
 
                           <div class="text-right mtop20" id="forMade">
-                            <input type=text id="num" placeholder="주제 개수"></input>
+                            <input type=text id="num" placeholder="주제 개수" required></input>
                             <input type="submit" value="회의 제출" onclick="endMeeting()" class="btn btn-sm btn-primary">
                           </div>
                         </div>
