--- a/production/tables_dynamic.html
+++ b/production/tables_dynamic.html
@@ -330,7 +330,7 @@
                     <td style="text-align: center;">
                       <!-- 최의 개최자일 경우 btn-info 클래스 -->
                       <!-- 버튼의 링크는 해당 회의 정보가 들어가있는 회의 시작화면 -->
-                      <button type="button" onclick="startMeeting('${data[i]["_id"]}')" class="btn btn-info btn-xs">시작</button>
+                      <button type="button" onclick="startMeeting('${data[i]["_id"]}', true)" class="btn btn-info btn-xs">시작</button>
                     </td>
                   </tr>
                   `
@@ -338,7 +338,7 @@
                   tr += `
                     <td style="text-align: center;">
                       <!-- 회의 참가자일경우 btn-dark 클래스 -->
-                      <button type="button" onclick="location.href='project_detail.html'" class="btn btn-dark btn-xs">참가</button>
+                      <button type="button" onclick="startMeeting('${data[i]["_id"]}', false)" class="btn btn-dark btn-xs">참가</button>
                     </td>
                   </tr>
                   `
@@ -346,7 +346,7 @@
                   tr += `
                     <td style="text-align: center;">
                       <!-- 회의 시작 시간 전 - 버튼 속성 disabled -->
-                      <button type="button" disabled onclick="location.href='project_detail.html'" class="btn btn-dark btn-xs">참가</button>
+                      <button type="button" disabled onclick="startMeeting('${data[i]["_id"]}', false)" class="btn btn-dark btn-xs">참가</button>
                     </td>
                   </tr>
                   `
@@ -360,9 +360,11 @@
           });
       }
 
-      function startMeeting(mid){
+      function startMeeting(mid, isMade){
         alert(mid);
-
+        if(!isMade) {
+          window.location.replace("project_detail.html?mid="+mid);
+        } else {
         var settings = {
           crossDomain: true,
           url: "https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/meet/start?mid="+mid,
@@ -377,7 +379,7 @@
           .fail(function () {
             alert('fail');
           });
-
+        }
       }
     </script>
 
