--- a/production/login.html
+++ b/production/login.html
@@ -67,13 +67,13 @@
               <form>
                 <h4>Login Form</h4>
                 <div>
-                  <input type="text" class="form-control" placeholder="ID" required="" />
+                  <input type="text" class="form-control" placeholder="ID" required="" id="id"/>
                 </div>
                 <div>
-                  <input type="password" class="form-control" placeholder="Password" required="" />
+                  <input type="password" class="form-control" placeholder="Password" required="" id="pw" />
                 </div>
                 <div>
-                  <a class="btn btn-default submit" href="index.html">Log in</a>
+                  <a class="btn btn-default submit" onclick="login()">Log in</a>
                   <a class="reset_pass" href="#">Lost your password?</a>
                 </div>
 
@@ -206,6 +206,39 @@
                 $('#PicturePreview').attr('src', e.target.result).fadeIn('slow');
             }
             reader.readAsDataURL(input.files[0]);
+        }
+      }
+
+      function login(){
+        try {
+
+          var id = $("#id").val();
+          var pw = $("#pw").val();
+
+          var settings = {
+            crossDomain: true,
+            url: "https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/login",
+            type: "POST",
+            contentType: "application/json",
+            data: `{
+              "uid": "${id}",
+              "pw": "${pw}"
+            }`
+          }
+
+          $.ajax(settings)
+            .done(function (response) {
+              console.log(response);
+              document.cookie = `unum=${response.unum}`;
+              alert(document.cookie);
+              window.location.replace("index.html");
+            })
+            .fail(function () {
+              alert('fail');
+            });
+
+        } catch(err) {
+          alert(err);
         }
       }
 
